--- a/TestCedrSparqlEndpoint.html
+++ b/TestCedrSparqlEndpoint.html
@@ -5,7 +5,7 @@
 </head>
 <body>
 
-<p>Test SPARQ endpoint IS CEDR III:</p>
+<p>Test SPARQL endpoint IS CEDR III:</p>
 <button onclick="getSparqlResult()">Get SPARQL result</button>
 <button onclick="getSparqlDescribeResult()">Get SPARQL DESCRIBE result</button>
 <script>
